@@ -41,6 +41,7 @@ class Profile
   bool loadFile(const QString &filename,QString *err_msg=NULL);
   int loadDirectory(const QString &dirpath,const QString &glob_template,
 		    QStringList *err_msgs);
+  int loadDirectory(const QString &glob_path,QStringList *err_msgs);
   QStringList sections() const;
   QStringList sectionIds(const QString &section) const;
   QString stringValue(const QString &section,const QString &tag,
