@@ -34,3 +34,5 @@
 	* Renamed fixture data files using a more consistent scheme.
 2024-10-25 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 1.1.0.
+2024-11-01 Fred Gleason <fredg@paravelsystems.com>
+	* Added an overloaded 'Profile::loadDirectory()' method.
